<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:src="@drawable/fundo_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTelaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:text="@string/txtTelaLogin"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="268dp"
        android:layout_height="59dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/txtEmail"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelaLogin" />

    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="264dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/txtSenha"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEntrar2"
        android:layout_width="304dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_fundo_cinza"
        android:text="@string/btnEntrar2"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSenha" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVoltar"
        android:layout_width="304dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_fundo_branco"
        android:text="@string/btnVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar2" />
</androidx.constraintlayout.widget.ConstraintLayout>